cleaned up notebooks

--- a/1-maas-test.ipynb
+++ b/1-maas-test.ipynb
@@ -22,9 +22,8 @@
     "from pathlib import Path\n",
     "\n",
     "API_URL = \"https://granite-3-3-8b-instruct-maas-apicast-production.apps.prod.rhoai.rh-aiservices-bu.com:443\"\n",
-    "MAAS_API_KEY = \"VLLM_API_TOKEN\"\n",
     "\n",
-    "API_KEY = os.environ.get(MAAS_API_KEY)\n",
+    "API_KEY = os.environ.get(\"VLLM_API_TOKEN\")\n",
     "\n",
     "input = \"What is the capital of Mongolia?\"\n",
     "\n",
