new notebooks for real-time search and tool calling

--- a/1-maas-test.ipynb
+++ b/1-maas-test.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "048be5f8-b62b-4a66-a171-528039ce9712",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The capital of Mongolia is Ulaanbaatar.\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import urllib3\n",
