Upgraded all notebooks to support llamastack 0.3.0

--- a/2-llamastack-test-basic.ipynb
+++ b/2-llamastack-test-basic.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a9748377-f83d-4711-abda-9718bd35bf9e",
    "metadata": {},
    "outputs": [],
@@ -102,10 +102,11 @@
     "from llama_stack_client import LlamaStackClient\n",
     "import rich\n",
     "\n",
-    "#LS_URL = \"http://llama-stack-dist-service:8321\"\n",
+    "# For access from Notebooks within the cluster\n",
+    "LS_URL = \"http://llama-stack-dist-service:8321\"\n",
     "\n",
     "# For access from Notebooks external to the cluster, use the route URL instead (oc get route -n competitor-analysis)\n",
-    "LS_URL = \"https://llama-stack-ext-competitor-analysis.apps.ocp.sx7qw.sandbox2219.opentlc.com/\"\n",
+    "#LS_URL = \"https://llama-stack-ext-competitor-analysis.apps.ocp.sx7qw.sandbox2219.opentlc.com/\"\n",
     "\n",
     "# Initialize the client\n",
     "client = LlamaStackClient(base_url=LS_URL)"
