--- a/3-simple-rag.ipynb
+++ b/3-simple-rag.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -151,10 +151,10 @@
    ],
    "source": [
     "# LlamaStack service URL (in-cluster)\n",
-    "# LLAMASTACK_URL = \"http://llama-stack-dist-service.competitor-analysis.svc.cluster.local:8321\"\n",
+    "LLAMASTACK_URL = \"http://llama-stack-dist-service.competitor-analysis.svc.cluster.local:8321\"\n",
     "\n",
     "# For access from Notebooks external to the cluster, use the route URL instead (oc get route -n competitor-analysis)\n",
-    "LLAMASTACK_URL = \"https://llama-stack-ext-competitor-analysis.apps.ocp.sx7qw.sandbox2219.opentlc.com/\"\n",
+    "# LLAMASTACK_URL = \"https://llama-stack-ext-competitor-analysis.apps.ocp.sx7qw.sandbox2219.opentlc.com/\"\n",
     "\n",
     "# Vector DB name (logical identifier used in pipeline)\n",
     "VECTOR_DB_NAME = \"competitor-docs\"\n",
