cleaned up markdown comments and tested with latest LS 0.3.0 deployment

--- a/1-maas-test.ipynb
+++ b/1-maas-test.ipynb
@@ -5,7 +5,7 @@
    "id": "4a6c8be5-796e-4349-a637-e5204540e263",
    "metadata": {},
    "source": [
-    "This simple notebook tests if a query can be sent to the remote inference end point running on MaaS"
+    "This simple notebook tests if a query can be sent to the remote inference end point running on Models as a Service (MaaS)"
    ]
   },
   {
